rename script for clarity and update manifest

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "content_scripts": [
     {
       "js": [
-        "myscript.js"
+        "searchAnswerToggle.js"
       ],
       "matches": [
         "*://*.j-archive.com/search.php?*",
